--- a/breeze.html
+++ b/breeze.html
@@ -304,7 +304,7 @@
                     <div class="socials">
                         <i data-site="https://www.facebook.com" class="fab fa-facebook-f"></i>
                         <i data-site="https://www.instagram.com" class="fab fa-instagram"></i>
-                        <i data-site="https://twitter.com" class="fab fa-twitter"></i>
+                        <i data-site="https://www.twitter.com" class="fab fa-twitter"></i>
                         <i data-site="https://www.linkedin.com" class="fab fa-linkedin-in"></i>
                     </div>
                 </div>
